# sample-serverless-digital-asset-payments

./: .env-sample  .eslintrc.js  .eslintrc.security.js  .gitignore  .prettierignore  .prettierrc  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: cdk-unit-tests.yml  ci.yml  lint.yml  pre-commit.yml
lambda/invoice/: index.js  package.json
lambda/invoice-management/: index.js  package.json
lambda/sweeper/: index.js  package.json
lambda/watcher/: index.js  package.json
lib/: crypto-invoice-stack.ts
non-evm-deployments/solana/: .env-sample  .gitignore  README.md  cdk.json  package-lock.json  package.json
non-evm-deployments/solana/lambda/invoice/: index.js  package.json
non-evm-deployments/solana/lambda/invoice-management/: index.js  package.json
non-evm-deployments/solana/lambda/sweeper/: index.js  package.json
non-evm-deployments/solana/lambda/watcher/: index.js  package.json
non-evm-deployments/solana/lib/: solana-invoice-stack.ts
non-evm-deployments/solana/scripts/: generate-wallets.js  send-payment.js  send-spl-payment.js  setup-secrets.sh  setup.sh  test-sol-payment.sh  test-spl-payment.sh  wallet-info.js
non-evm-deployments/sui/: .env-sample  .gitignore  CDK_NAG_RESULTS.md  CLEAN_DEPLOY_TEST.md  Cargo.toml  DEPLOY_HARDWARE_WALLET.md  GITHUB_PUBLICATION_CHECKLIST.md  KMS_PRODUCTION_NOTES.md  MAINTENANCE.md  MONITORING_SETUP.md  PHASE2_SECURITY_HARDENING.md  PHASE3_MULTI_TOKEN_SUPPORT.md  README.md  SECURITY.md  SECURITY_SETUP.md  TOKEN_SWEEPING_COMPLETE.md  build.sh  cdk.json  package-lock.json  package.json  tsconfig.json
non-evm-deployments/sui/infra/: app.ts  stack.ts
non-evm-deployments/sui/invoice-generator/: Cargo.toml
non-evm-deployments/sui/invoice-generator/src/: main.rs
non-evm-deployments/sui/invoice-manager/: Cargo.toml
non-evm-deployments/sui/invoice-manager/src/: main.rs
non-evm-deployments/sui/scripts/: generate-wallets.js  get-kms-address.js  setup-secrets.js  setup.sh  test-payment.sh
non-evm-deployments/sui/shared/: Cargo.toml
non-evm-deployments/sui/shared/src/: lib.rs  models.rs  wallet.rs
non-evm-deployments/sui/sweeper/: Cargo.toml
non-evm-deployments/sui/sweeper/src/: main.rs
non-evm-deployments/sui/watcher/: Cargo.toml
non-evm-deployments/sui/watcher/src/: main.rs  test.rs
scripts/: derive-address.js  lint-check.sh  setup-secrets.js  setup-secrets.sh  test-cdk.sh  wallet-info.js
solana/: .env-sample  README.md  package.json
solana/lambda/invoice/: index.js
solana/lambda/invoice-management/: index.js
solana/lambda/sweeper/: index.js
solana/lambda/watcher/: index.js
solana/lib/: solana-invoice-stack.ts
solana/scripts/: generate-wallets.js  send-payment.js  send-spl-payment.js  setup-secrets.sh  test-sol-payment.sh  test-spl-payment.sh  wallet-info.js
test/integration/: cleanup.sh  execute_payment.sh  run_test_pipeline.sh  setup.sh  test-invoice-management-api.sh
test/unit/cdk/: crypto-invoice-stack-simple.test.js  crypto-invoice-stack.test.js  security.test.js
