[workspace]
members = ["invoice-generator", "invoice-manager", "watcher", "sweeper", "shared"]
resolver = "2"

[workspace.dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "db643fd05a1b1c4cd52de3939766b53e12ce137e" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lambda_runtime = "0.13"
aws-config = "1.5"
aws-sdk-dynamodb = "1.55"
aws-sdk-secretsmanager = "1.55"
aws-sdk-sns = "1.55"
aws-sdk-cloudwatch = "1.55"
aws-sdk-kms = "1.55"
anyhow = "1"
bip32 = "0.5"
bip39 = "2.0"
slip10_ed25519 = "0.1"
qrcode = "0.14"
base64 = "0.22"
