[package]
name = "invoice-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
lambda_http = { version = "0.13", default-features = false, features = ["apigw_rest"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.55"
shared = { path = "../shared" }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
