[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sns = { workspace = true }
sui-sdk = { workspace = true }
sui-types = { workspace = true }
anyhow = { workspace = true }
